Login established, generic DB connection to be refactored in version 2 of application